--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </main>
    
     <footer>
-      <div class="content-wrap">
+      <div class="footer-grid">
             
         <section><a href="index.html"><img src="../images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2"></a></section>
          <section class="footer-nav">
