--- a/producers.html
+++ b/producers.html
@@ -124,6 +124,17 @@
     </div>
     </main>
 
-    <footer></footer>
+    <footer>
+      <div class="footer-grid">
+        <section><a href="index.html"><img src="../images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2"></a></section>
+         <section class="footer-nav">
+          <a href="index.html">Home</a>
+            <a href="films.html">Films</a>
+              <a href="producers.html">Producers</a>
+                <a href="search.html">Search</a>
+              </section>
+                  <section><a href="index.html"><i class="fas fa-arrow-up"></i></a></section>
+        </div>
+    </footer>
   </body>
 </html>
