--- a/search.html
+++ b/search.html
@@ -41,8 +41,8 @@
               placeholder="Search.."
               name="search"
               class="search-input"
-            /><button type="submit">
-              <i class="fas fa-search" style="font-size: 28px"></i>
+            /><button><a href="search-results.html">
+              <i class="fas fa-search" style="font-size: 28px"></i></a>
             </button>
           </form>
           <p>Type in film title, producer, tags or category..</p>
