--- a/producers.html
+++ b/producers.html
@@ -126,7 +126,7 @@
 
     <footer>
       <div class="footer-grid">
-        <section><a href="index.html"><img src="../images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2"></a></section>
+        <section><a href="index.html"><img src="images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2"></a></section>
          <section class="footer-nav">
           <a href="index.html">Home</a>
             <a href="films.html">Films</a>
