--- a/films.html
+++ b/films.html
@@ -111,9 +111,13 @@
           <i class="fas fa-chevron-left"></i>
         </div>
           <a href="watch1.html"><img src="images/film9.jpg" alt="Film Title by Producer-name" class="film"></a>
+          <a href="watch1.html">Film title</a>
           <a href="watch1.html"><img src="images/film4.jpg" alt="Film Title by Producer-name" class="film"></a>
+          <a href="watch1.html">Film title</a>
           <a href="watch1.html"><img src="images/film7.jpg" alt="Film Title by Producer-name" class="film"></a>
+          <a href="watch1.html">Film title</a>
           <a href="watch1.html"><img src="images/film3.jpg" alt="Film Title by Producer-name" class="film"></a>
+          <a href="watch1.html">Film title</a>
           <div class="arrow-icon">
             <i class="fas fa-chevron-right"></i>
             </div>
