--- a/films.html
+++ b/films.html
@@ -110,8 +110,8 @@
         <div class="arrow-icon">
           <i class="fas fa-chevron-left"></i>
         </div>
-          <a href="watch1.html"><img src="images/film9.jpg" alt="Film Title by Producer-name" class="film"></a>
-          <a href="watch1.html">Film title</a>
+          <a href="watch1.html" name="film"><img src="images/film9.jpg" alt="Film Title by Producer-name" class="film"></a>
+          <label for="film"><a href="watch1.html">Film title</a></label>
           <a href="watch1.html"><img src="images/film4.jpg" alt="Film Title by Producer-name" class="film"></a>
           <a href="watch1.html">Film title</a>
           <a href="watch1.html"><img src="images/film7.jpg" alt="Film Title by Producer-name" class="film"></a>
