--- a/films.html
+++ b/films.html
@@ -117,8 +117,8 @@
           <div class="arrow-icon">
             <i class="fas fa-chevron-right"></i>
             </div>
-            <p> </p>          
-            <label for="film"><a href="watch1.html">Film title</a></label>
+                      
+          <div class="film-label"><label for="film"><a href="watch1.html">Film title</a></label></div>
           <label for="film"><a href="watch1.html">Film title</a></label>
           <label for="film"><a href="watch1.html">Film title</a></label>
           <label for="film"><a href="watch1.html">Film title</a></label>
