--- a/films.html
+++ b/films.html
@@ -119,9 +119,9 @@
             </div>
                       
           <div class="film-label"><label for="film"><a href="watch1.html">Film title</a></label></div>
-          <label for="film"><a href="watch1.html">Film title</a></label>
-          <label for="film"><a href="watch1.html">Film title</a></label>
-          <label for="film"><a href="watch1.html">Film title</a></label>
+          <div class="film-label"><label for="film"><a href="watch1.html">Film title</a></label></div>
+          <div class="film-label"><label for="film"><a href="watch1.html">Film title</a></label></div>
+          <div class="film-label"><label for="film"><a href="watch1.html">Film title</a></label></div>
         </div>
       </div>
         </section>
