--- a/films.html
+++ b/films.html
@@ -118,10 +118,10 @@
             <i class="fas fa-chevron-right"></i>
             </div>
                       
-          <div class="film-label"><label for="film"><a href="watch1.html">Film title</a></label></div>
-          <div class="film-label"><label for="film"><a href="watch1.html">Film title</a></label></div>
-          <div class="film-label"><label for="film"><a href="watch1.html">Film title</a></label></div>
-          <div class="film-label"><label for="film"><a href="watch1.html">Film title</a></label></div>
+          <label for="film" class="label1"><a href="watch1.html">Film title</a></label>
+          <label for="film" class="label2"><a href="watch1.html">Film title</a></label>
+          <label for="film" class="label3"><a href="watch1.html">Film title</a></label>
+          <label for="film" class="label4"><a href="watch1.html">Film title</a></label>
         </div>
       </div>
         </section>
