--- a/films.html
+++ b/films.html
@@ -81,6 +81,10 @@
         <div class="arrow-icon">
           <i class="fas fa-chevron-right"></i>
           </div>
+          <label for="film" class="label1"><a href="watch1.html">Film title</a></label>
+          <label for="film" class="label2"><a href="watch1.html">Film title</a></label>
+          <label for="film" class="label3"><a href="watch1.html">Film title</a></label>
+          <label for="film" class="label4"><a href="watch1.html">Film title</a></label>
       </div>
       </div>
       </section>
@@ -99,6 +103,10 @@
         <div class="arrow-icon">
           <i class="fas fa-chevron-right"></i>
           </div>
+          <label for="film" class="label1"><a href="watch1.html">Film title</a></label>
+          <label for="film" class="label2"><a href="watch1.html">Film title</a></label>
+          <label for="film" class="label3"><a href="watch1.html">Film title</a></label>
+          <label for="film" class="label4"><a href="watch1.html">Film title</a></label>
       </div>
         </div>
       </section>
@@ -116,8 +124,7 @@
           <a href="watch1.html"><img src="images/film3.jpg" alt="Film Title by Producer-name" class="film"></a>
           <div class="arrow-icon">
             <i class="fas fa-chevron-right"></i>
-            </div>
-                      
+            </div>           
           <label for="film" class="label1"><a href="watch1.html">Film title</a></label>
           <label for="film" class="label2"><a href="watch1.html">Film title</a></label>
           <label for="film" class="label3"><a href="watch1.html">Film title</a></label>
