--- a/search-results.html
+++ b/search-results.html
@@ -53,8 +53,9 @@
               placeholder="Search.."
               name="search"
               class="search-input"
-            /><button type="submit">
-              <i class="fas fa-search" style="font-size: 28px"></i>
+            /><button class="search-button" type="submit">
+              <div class="search-icon">
+              <i class="fas fa-search"></i></div>
             </button>
           </form>
       </div>
