--- a/account-watcher.html
+++ b/account-watcher.html
@@ -49,20 +49,11 @@
       <div class="back-icon">
           <i class="fas fa-chevron-left"></i></a></div>
 
-  <section class="manage-buttons">
-    
-        <a href="manage-account/manage-account-pro.html" class="button2">
-        <div class="button2-icon"><i class="fas fa-cog"></i>
-        </div>Manage profile</a>
-    <a href="manage-account/manage-bankdetails-pro.html" class="button2">
-            <div class="button2-icon">
-                <i class="far fa-credit-card"></i>
-        </div>Payment settings</a>
-  </section>
 <h1>Account</h1>
-  <div class="watcher-profile-grid">
+  
+    <div class="watcher-profile-grid">
       <section>
-        <img src="images/blank-profile-picture.jpg" alt="Profile picture">
+        <img src="images/blank-profile-picture.jpg" alt="Profile picture" class="profile-picture-watcher">
       </section>
 
       <section>
@@ -75,6 +66,16 @@
         <h2>Birth date:</h2>
         <p>MMDDYEAR</p>
       </section>
+
+      <section>
+        <a href="manage-account/manage-account-pro.html" class="button2">
+        <div class="button2-icon"><i class="fas fa-cog"></i>
+        </div>Manage profile</a>
+    <a href="manage-account/manage-bankdetails-pro.html" class="button2">
+            <div class="button2-icon">
+                <i class="far fa-credit-card"></i>
+        </div>Payment settings</a>
+  </section>
   </div>
 </main>
 
