--- a/account-watcher.html
+++ b/account-watcher.html
@@ -68,10 +68,10 @@
       </section>
 
       <section>
-        <a href="manage-account/manage-account-pro.html" class="button2">
+        <a href="manage-account/manage-personaldetailes-watcher.html" class="button2">
         <div class="button2-icon"><i class="fas fa-cog"></i>
         </div>Manage profile</a>
-    <a href="manage-account/manage-bankdetails-pro.html" class="button2">
+    <a href="manage-account/manage-carddetials-watcher.html" class="button2">
             <div class="button2-icon">
                 <i class="far fa-credit-card"></i>
         </div>Payment settings</a>
@@ -88,7 +88,7 @@
             <a href="producers.html">Producers</a>
               <a href="search.html">Search</a>
             </section>
-                <section><a href="index.html"><i class="fas fa-arrow-up"></i></a></section>
+                <section><a href="account-watcher.html"><i class="fas fa-arrow-up"></i></a></section>
       </div>
   </footer>
   </body>
