--- a/account-watcher.html
+++ b/account-watcher.html
@@ -29,7 +29,7 @@
         <a href="index.html"><img src="images/logo.png" alt="SquarEyes - connecting film-lovers" class="logo">
           <nav class="right-nav">
            <ul>
-            <a href="/account-producer.html" class="active-icon"><i class="fas fa-user-circle"></i></a>
+            <a href="/account-watcher.html" class="active-icon"><i class="fas fa-user-circle"></i></a>
             <a href="/search.html"><i class="fas fa-search"></i></a>
           </ul>
           </nav>
