--- a/films.html
+++ b/films.html
@@ -144,7 +144,7 @@
               <a href="producers.html">Producers</a>
                 <a href="search.html">Search</a>
               </section>
-                  <section><a href="index.html"><i class="fas fa-arrow-up"></i></a></section>
+                  <section><a href="films.html"><i class="fas fa-arrow-up"></i></a></section>
         </div>
     </footer>
   </body>
