--- a/producer-profile.html
+++ b/producer-profile.html
@@ -87,7 +87,7 @@
             <a href="producers.html">Producers</a>
               <a href="search.html">Search</a>
             </section>
-                <section><a href="index.html"><i class="fas fa-arrow-up"></i></a></section>
+                <section><a href="producer-profile.html"><i class="fas fa-arrow-up"></i></a></section>
       </div>
   </footer>
   </body>
