--- a/producers.html
+++ b/producers.html
@@ -133,7 +133,7 @@
               <a href="producers.html">Producers</a>
                 <a href="search.html">Search</a>
               </section>
-                  <section><a href="index.html"><i class="fas fa-arrow-up"></i></a></section>
+                  <section><a href="producers.html"><i class="fas fa-arrow-up"></i></a></section>
         </div>
     </footer>
   </body>
