--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <header>
      <div class="content-wrap">
        <a href="index.html"><img src="images/logo.png" alt="SquarEyes - connecting film-lovers" class="logo">
-         <nav class="right-nav">
+         <div class="right-nav">
           <ul>
            <a href="login.html">Sign in</a>
            <a href="search.html"><i class="fas fa-search"></i></a>
          </ul>
-         </nav>
+        </div>
      </div>
    </header>
   
