--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   
   <body>
-    <header>
+    <header id="header">
      <div class="content-wrap">
        <a href="index.html"><img src="images/logo.png" alt="SquarEyes - connecting film-lovers" class="logo">
          <nav class="right-nav">
@@ -76,7 +76,7 @@
               <a href="producers.html">Producers</a>
                 <a href="search.html">Search</a>
               </section>
-                  <section><a href="index.html"><i class="fas fa-arrow-up"></i></a></section>
+                  <section><a href="#header"><i class="fas fa-arrow-up"></i></a></section>
         </div>
     </footer>
   </body>
