--- a/manage-account/manage-account-pro.html
+++ b/manage-account/manage-account-pro.html
@@ -47,7 +47,7 @@
         <h1>Name Surname</h1>
         <form>
         <label for="producer-description" class="description">Description</label>
-            <textarea class="form__input" name="producer-description" rows="5" cols="50"></textarea>
+            <textarea class="form__input-description" name="producer-description" rows="5" cols="50"></textarea>
         </form>
       </section>
 
@@ -64,7 +64,7 @@
         <p><label for="film-title">Film title</label>
             <input type="text" name="film-title" class="form__input"></p>
         <p><label for="film-description" class="description">Description</label>
-            <textarea class="form__input" name="film-description" rows="5" cols="50"></textarea></p>
+            <textarea class="form__input-description" name="film-description" rows="5" cols="50"></textarea></p>
         <p><label for="tags">Tags</label>
             <input type="text" name="tags" placeholder="Catogory etc.." class="form__input"></p>
         </div>  
