--- a/account-watcher.html
+++ b/account-watcher.html
@@ -56,7 +56,7 @@
         <img src="images/blank-profile-picture.jpg" alt="Profile picture" class="profile-picture-watcher">
       </section>
 
-      <section>
+      <section class="personal-watcher">
         <h2>Name:</h2>
         <p>Nane Surname</p>
         <h2>E-mail:</h2>
