--- a/login.html
+++ b/login.html
@@ -45,7 +45,7 @@
             <input type="submit" value="Sign in" class="button1">
         </form>
         <p>Not a member?</p>
-        <p>Create an account<a href="create-account.html">here</a></p>
+        <p class="not-a-member">Create an account<a href="create-account.html">here</a></p>
       </main>
     </div>
   </body>
