--- a/search.html
+++ b/search.html
@@ -42,7 +42,7 @@
               name="search"
               class="search-input"
             /><button><a href="search-results.html">
-              <i class="fas fa-search" style="font-size: 28px"></i></a>
+              <div class="search icon"><i class="fas fa-search" style="font-size: 28px"></i></div></a>
             </button>
           </form>
           <p>Type in film title, producer, tags or category..</p>
