--- a/search.html
+++ b/search.html
@@ -41,8 +41,8 @@
               placeholder="Search.."
               name="search"
               class="search-input"
-            /><button><a href="search-results.html">
-              <div class="search icon"><i class="fas fa-search" style="font-size: 28px"></i></div></a>
+            /><button class="search-button"><a href="search-results.html">
+              <div class="search icon"><i class="fas fa-search"></i></div></a>
             </button>
           </form>
           <p>Type in film title, producer, tags or category..</p>
