--- a/search.html
+++ b/search.html
@@ -42,7 +42,7 @@
               name="search"
               class="search-input"
             /><button class="search-button"><a href="search-results.html">
-              <div class="search icon"><i class="fas fa-search"></i></div></a>
+              <div class="search-icon"><i class="fas fa-search"></i></div></a>
             </button>
           </form>
           <p>Type in film title, producer, tags or category..</p>
