--- a/films.html
+++ b/films.html
@@ -46,7 +46,7 @@
           <div class="arrow-icon">
             <i class="fas fa-chevron-left"></i>
           </div>
-          <a href="watch1.html">
+          <a href="/watch/watch1.html">
             <img src="images/film1-big.jpg" alt="Film Title by Producer-name" class="film-big"></a>
           <div class="arrow-icon">
             <i class="fas fa-chevron-right"></i>
@@ -74,17 +74,17 @@
           <div class="arrow-icon">
             <i class="fas fa-chevron-left"></i>
           </div>  
-        <a href="watch1.html"><img src="images/film1.jpg" alt="Film Title by Producer-name" class="film"></a>
-        <a href="watch1.html"><img src="images/film2.jpg" alt="Film Title by Producer-name" class="film"></a>
-        <a href="watch1.html"><img src="images/film3.jpg" alt="Film Title by Producer-name" class="film"></a>
-        <a href="watch1.html"><img src="images/film4.jpg" alt="Film Title by Producer-name" class="film"></a>
+        <a href="/watch/watch1.html"><img src="images/film1.jpg" alt="Film Title by Producer-name" class="film"></a>
+        <a href="/watch/watch1.html"><img src="images/film2.jpg" alt="Film Title by Producer-name" class="film"></a>
+        <a href="/watch/watch1.html"><img src="images/film3.jpg" alt="Film Title by Producer-name" class="film"></a>
+        <a href="/watch/watch1.html"><img src="images/film4.jpg" alt="Film Title by Producer-name" class="film"></a>
         <div class="arrow-icon">
           <i class="fas fa-chevron-right"></i>
           </div>
-          <label for="film" class="label1"><a href="watch1.html">Film title</a></label>
-          <label for="film" class="label2"><a href="watch1.html">Film title</a></label>
-          <label for="film" class="label3"><a href="watch1.html">Film title</a></label>
-          <label for="film" class="label4"><a href="watch1.html">Film title</a></label>
+          <label for="film" class="label1"><a href="/watch/watch1.html">Film title</a></label>
+          <label for="film" class="label2"><a href="/watch/watch1.html">Film title</a></label>
+          <label for="film" class="label3"><a href="/watch/watch1.html">Film title</a></label>
+          <label for="film" class="label4"><a href="/watch/watch1.html">Film title</a></label>
       </div>
       </div>
       </section>
@@ -96,17 +96,17 @@
             <div class="arrow-icon">
               <i class="fas fa-chevron-left"></i>
             </div>
-        <a href="watch1.html"><img src="images/film5.jpg" alt="Film Title by Producer-name" class="film"></a>
-        <a href="watch1.html"><img src="images/film6.jpg" alt="Film Title by Producer-name" class="film"></a>
-        <a href="watch1.html"><img src="images/film7.jpg" alt="Film Title by Producer-name" class="film"></a>
-        <a href="watch1.html"><img src="images/film8.jpg" alt="Film Title by Producer-name" class="film"></a>
+        <a href="/watch/watch1.html"><img src="images/film5.jpg" alt="Film Title by Producer-name" class="film"></a>
+        <a href="/watch/watch1.html"><img src="images/film6.jpg" alt="Film Title by Producer-name" class="film"></a>
+        <a href="/watch/watch1.html"><img src="images/film7.jpg" alt="Film Title by Producer-name" class="film"></a>
+        <a href="/watch/watch1.html"><img src="images/film8.jpg" alt="Film Title by Producer-name" class="film"></a>
         <div class="arrow-icon">
           <i class="fas fa-chevron-right"></i>
           </div>
-          <label for="film" class="label1"><a href="watch1.html">Film title</a></label>
-          <label for="film" class="label2"><a href="watch1.html">Film title</a></label>
-          <label for="film" class="label3"><a href="watch1.html">Film title</a></label>
-          <label for="film" class="label4"><a href="watch1.html">Film title</a></label>
+          <label for="film" class="label1"><a href="/watch/watch1.html">Film title</a></label>
+          <label for="film" class="label2"><a href="/watch/watch1.html">Film title</a></label>
+          <label for="film" class="label3"><a href="/watch/watch1.html">Film title</a></label>
+          <label for="film" class="label4"><a href="/watch/watch1.html">Film title</a></label>
       </div>
         </div>
       </section>
@@ -118,17 +118,17 @@
         <div class="arrow-icon">
           <i class="fas fa-chevron-left"></i>
         </div>
-          <a href="watch1.html" name="film"><img src="images/film9.jpg" alt="Film Title by Producer-name" class="film"></a>
-          <a href="watch1.html"><img src="images/film4.jpg" alt="Film Title by Producer-name" class="film"></a>
-          <a href="watch1.html"><img src="images/film7.jpg" alt="Film Title by Producer-name" class="film"></a>
-          <a href="watch1.html"><img src="images/film3.jpg" alt="Film Title by Producer-name" class="film"></a>
+          <a href="/watch/watch1.html" name="film"><img src="images/film9.jpg" alt="Film Title by Producer-name" class="film"></a>
+          <a href="/watch/watch1.html"><img src="images/film4.jpg" alt="Film Title by Producer-name" class="film"></a>
+          <a href="/watch/watch1.html"><img src="images/film7.jpg" alt="Film Title by Producer-name" class="film"></a>
+          <a href="/watch/watch1.html"><img src="images/film3.jpg" alt="Film Title by Producer-name" class="film"></a>
           <div class="arrow-icon">
             <i class="fas fa-chevron-right"></i>
             </div>           
-          <label for="film" class="label1"><a href="watch1.html">Film title</a></label>
-          <label for="film" class="label2"><a href="watch1.html">Film title</a></label>
-          <label for="film" class="label3"><a href="watch1.html">Film title</a></label>
-          <label for="film" class="label4"><a href="watch1.html">Film title</a></label>
+          <label for="film" class="label1"><a href="/watch/watch1.html">Film title</a></label>
+          <label for="film" class="label2"><a href="/watch/watch1.html">Film title</a></label>
+          <label for="film" class="label3"><a href="/watch/watch1.html">Film title</a></label>
+          <label for="film" class="label4"><a href="/watch/watch1.html">Film title</a></label>
         </div>
       </div>
         </section>
