--- a/watch/watch1.html
+++ b/watch/watch1.html
@@ -31,7 +31,7 @@
         <div class="back-icon"><i class="fas fa-chevron-left" style="font-size: 30px"></i
     ></a></div>
 <section class="film-section">
-    <img src="images/film3-big.jpg" alt="Film title" class="film-big">
+    <img src="../images/film3-big.jpg" alt="Film title" class="film-big">
     <div class="play-icon"><i class="far fa-play-circle"></i></div>
     <h2>Film title</h2>
     <h3>From: Producer name</h3>
