--- a/watch/watch1.html
+++ b/watch/watch1.html
@@ -26,7 +26,7 @@
     <link href="../styles/styles.css" rel="stylesheet" />
   </head>
 
-  <body>
+  <body class="black-background">
     <a href="index.html">
         <div class="back-icon"><i class="fas fa-chevron-left" style="font-size: 30px"></i
     ></a></div>
