--- a/watch/watch1.html
+++ b/watch/watch1.html
@@ -39,8 +39,8 @@
     <p>Ita quia cori dolore plicide pore con ni ommolorrum quae optatent quam dolorum facea sequam nam facipsum quo bearchi citiunt esendae vel minus sunt, nit eatqui num estiisi nctios por mi, que</p> 
     <p>volore voluptas eum solo optatquam, aut fuga. Fuga. Hendit maxim hitatibus</p>
 
-    <div class="profile-button">
-        <a href="producer-profile.html" class="button1"><div class="button2-icon">
+    <div class="watch-button">
+        <a href="producer-profile.html" class="button1"><div class="credit-card-icon">
             <i class="far fa-credit-card"></i>
     </div>Watch</a>
     </div>
