--- a/watch/watch1.html
+++ b/watch/watch1.html
@@ -40,8 +40,7 @@
     <p>volore voluptas eum solo optatquam, aut fuga. Fuga. Hendit maxim hitatibus</p>
 
     <div class="watch-button">
-        <a href="producer-profile.html" class="button1"><div class="credit-card-icon">
-            <i class="far fa-credit-card"></i>
+        <a href="producer-profile.html" class="button1">
     </div>Watch</a>
     </div>
   </section>
