--- a/watch/watch2.html
+++ b/watch/watch2.html
@@ -33,7 +33,7 @@
 <section class="film-section">
         <h1>Do you want to watch?
         </h1>
-        <p>Square Eyes is a pay-per-view streaming site. Only 2$ per film.</p>
+        <p class="text-align">Square Eyes is a pay-per-view streaming site. Only 2$ per film.</p>
     <div class="watch-button">
         <a href="watch3.html" class="button1">Go to payment</a>
     </div>
