--- a/watch/watch3.html
+++ b/watch/watch3.html
@@ -30,7 +30,6 @@
     <a href="index.html">
         <div class="back-icon"><i class="fas fa-chevron-left" style="font-size: 30px"></i
     ></a></div>
-<section class="film-section">
     <form action="submit.php" method="GET">
         <fieldset class="credit-card">
             <div class="grid-h1">
@@ -46,12 +45,9 @@
             <input type="text" name="cvv" class="form__input"></p>
             <p><label for="country">Country</label>
             <input type="text" name="country" class="form__input"></p>
-         </fieldset>              
+                  <div class="watch-button"><a href="watch4.html" class="button1">Continue</a></div>
+                </fieldset>              
          </form>
-    <div class="watch-button">
-        <a href="watch4.html" class="button1">Continue</a>
-    </div>
-  </section>
 </main>
 </div>
 </body>
