--- a/watch/watch4.html
+++ b/watch/watch4.html
@@ -34,7 +34,7 @@
         <div class="check-icon-big"><i class="fas fa-check"></i></div>
         <h1>Success</h1>
         <p class="text-align">Thank you for your purchase. Enjoy your film!</p>
-           <div><a href="../film.html" class="button1">Watch</a></div>
+           <div class="watch-button"><a href="../film.html" class="button1">Watch</a></div>
       </section>
 </main>
 </div>
