--- a/Create-account-pro/create-account-pro2.html
+++ b/Create-account-pro/create-account-pro2.html
@@ -59,10 +59,9 @@
             <p><label for="bankcode">Bankcode (US)</label>
             <input type="text" name="bankcode" class="form__input"></p>
          </fieldset>
-         <button type="submit" class="arrow-button"><i class="fas fa-arrow-circle-right"></i></button>
+         <button class="arrow-button"><a href="./create-account-pro3.html"><i class="fas fa-arrow-circle-right"></i></a></button>
         </form>
 
-         <a href="../create-account-pro/create-account-pro3.html">Next</a>
     </main>
 
     <footer>
