--- a/Create-account-watcher/create-account-watcher1.html
+++ b/Create-account-watcher/create-account-watcher1.html
@@ -50,7 +50,7 @@
             <p>Send newsletters to my e-mail address</p>
         </div>
         </fieldset>
-        <button type="submit" class="arrow-button"><i class="fas fa-arrow-circle-right"></i></button>
+        <button class="arrow-button"><a href="./create-account-watcher2.html"><i class="fas fa-arrow-circle-right"></i></a></button>
      </form>
         </body>
     </main>
