--- a/watch/watch3.html
+++ b/watch/watch3.html
@@ -27,7 +27,7 @@
   </head>
 
   <body class="black-background">
-    <a href="index.html">
+    <a href="watch2.html">
         <div class="back-icon"><i class="fas fa-chevron-left" style="font-size: 30px"></i
     ></a></div>
 <section class="film-section">
