--- a/watch/watch4.html
+++ b/watch/watch4.html
@@ -27,7 +27,7 @@
   </head>
 
   <body class="black-background">
-    <a href="index.html">
+    <a href="watch3.html".html">
         <div class="back-icon"><i class="fas fa-chevron-left" style="font-size: 30px"></i
     ></a></div>
     <section class="success-section">
