--- a/create-producer-account/producer-creditcard.html
+++ b/create-producer-account/producer-creditcard.html
@@ -25,36 +25,35 @@
 
     <main>
         <section class="circle-section">
+        <div class="circle">  
+            <i class="fas fa-circle"></i>
+        </div>
+        <div class="circle">  
+            <i class="fas fa-circle"></i>
+        </div>
         <div class="active-circle">
-            <i class="fas fa-circle"></i>
-        </div>
-        <div class="circle">  
-            <i class="fas fa-circle"></i>
-        </div>
-        <div class="circle">  
             <i class="fas fa-circle"></i>
         </div>
         </section>
 
-     <form action="submit.php" method="GET">
-        <fieldset class="personal-information">
-            <h1 class="h1-form">Personal information</h1>
-            <p><label for="fullname" class="">Full name</label>
-            <input type="text" name="fullname" class="form__input" required></p>
-            <p><label for="e-mail">E-mail</label>
-            <input type="text" name="e-mail" class="form__input" required></p>
-            <p><label for="birthdate">Birth date</label>
-            <input type="text" name="birthdate" class="form__input"required></p>
-            <p><label for="password">Choose your password</label>
-            <input type="text" name="password" class="form__input"required></p>
-            <div class="newsletter-section">
-            <input type="checkbox" name="newsletter" value="newsletter" id="newsletter" class="newsletter">
-            <p>Send newsletters to my e-mail address</p>
-        </div>
-        </fieldset>
-        <button class="arrow-button"><a href="./create-account-pro2.html"><i class="fas fa-arrow-circle-right"></i></a></button>
-     </form>
-    
+        <form action="submit.php" method="GET">
+        <fieldset class="credit-card">
+            <div class="grid-h1">
+            <h1 class="h1-form">Register your credit card</h1>
+            <p>*Optional - If your interested in watching other producers' films, </p>
+            <p> can add your creditcard infomation for easy payment.</p>
+            </div>
+            <p><label for="cardnumber">Cardnumber</label>
+            <input type="text" name="cardnumber" class="form__input"></p>
+            <p><label for="cardholdername">Cardholder name</label>
+            <input type="text" name="cardholdername" class="form__input"></p>
+            <p><label for="expiredate">Expire date</label>
+            <input type="text" name="expiredate" class="form__input"></p>
+            <p><label for="cvv">CVV</label>
+            <input type="text" name="cvv" class="form__input"></p>
+         </fieldset>
+         <button class="arrow-button"><a href="producer-success.html"><i class="fas fa-arrow-circle-right"></i></a></button>
+         </form>
     </body>
     </main>
 
