--- a/film.html
+++ b/film.html
@@ -27,7 +27,7 @@
   </head>
 
   <body class="black-background">
-    <a href="/watch/watch4.html">
+    <a href="films.html">
         <div class="back-icon"><i class="fas fa-chevron-left" style="font-size: 30px"></i
     ></a></div>
 <section class="film-section">
