--- a/watch/watch1.html
+++ b/watch/watch1.html
@@ -34,7 +34,7 @@
     <img src="../images/film3-big.jpg" alt="Film title" class="film-big">
     <div class="play-icon"><i class="far fa-play-circle"></i></div>
     <h2>Film title</h2>
-    <h3>From: Producer name</h3>
+    <a href="../producer-profile.html"><h3>From: Producer name</h3></a>
     <p>Nequi omnit quasit eost aut fugit ut estium susam fuga. Ficaepe liatque porepera dolorporum que del et est et que et anis cum nos volorpor aut a doluptatem dolupta temqui aut demolup tibuscitem. </p>
     <p>Ita quia cori dolore plicide pore con ni ommolorrum quae optatent quam dolorum facea sequam nam facipsum quo bearchi citiunt esendae vel minus sunt, nit eatqui num estiisi nctios por mi, que</p> 
     <p>volore voluptas eum solo optatquam, aut fuga. Fuga. Hendit maxim hitatibus</p>
