--- a/watch/watch3.html
+++ b/watch/watch3.html
@@ -49,7 +49,7 @@
          </fieldset>              
          </form>
     <div class="watch-button">
-        <a href="watch4.html" class="button1">Continue</a>
+        <a href="./watch4.html" class="button1">Continue</a>
     </div>
   </section>
 </main>
