--- a/watch/watch1.html
+++ b/watch/watch1.html
@@ -31,7 +31,7 @@
         <div class="back-icon"><i class="fas fa-chevron-left" style="font-size: 30px"></i
     ></a></div>
 <section class="film-section">
-    <a href="./watch2.html">
+    <a href="watch2.html">
     <img src="../images/film3-big.jpg" alt="Film title" class="film-big">
     <div class="play-icon"><i class="far fa-play-circle"></i></div></a>
     <h2>Film title</h2>
@@ -41,7 +41,7 @@
     <p>volore voluptas eum solo optatquam, aut fuga. Fuga. Hendit maxim hitatibus</p>
 
     <div class="watch-button">
-        <a href="./watch2.html" class="button1">Watch</a>
+        <a href="watch2.html" class="button1">Watch</a>
     </div>
   </section>
 </main>
