--- a/login.html
+++ b/login.html
@@ -28,8 +28,8 @@
 
   <body>
     <a href="index.html"
-      ><i class="fas fa-chevron-left" style="font-size: 30px"></i
-    ></a>
+      ><div class="back-icon"><i class="fas fa-chevron-left"></i
+    ></div></a>
 
     <div class="popup-section">
       <main>
