--- a/search.html
+++ b/search.html
@@ -28,7 +28,7 @@
 
   <body>
     <a href="index.html">
-        <div class="back-icon"><i class="fas fa-chevron-left" style="font-size: 30px"></i
+        <div class="back-icon"><i class="fas fa-chevron-left"></i
     ></a></div>
 
     <div class="popup-section">
