--- a/search.html
+++ b/search.html
@@ -29,7 +29,7 @@
   <body>
     <a href="index.html">
         <div class="back-icon"><i class="fas fa-chevron-left"></i
-    ></a></div>
+    ></div></a>
 
     <div class="popup-section">
       <main>
